--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
@@ -36,8 +36,16 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<!--AJOUTS DES FILTRES-->
+		<div class="categories">
+			<span id="All" class="filter activeFilter">Tous</span>
+			<span id="Objets" class="filter">Objets</span>
+			<span id="Appartements" class="filter">Appartements</span>
+			<span id="Hotels & restaurants" class="filter">Hotels & restaurants</span>
+		</div>
+		<!-- ///// -->
 		<div class="gallery">
-			<figure>
+			<!-- <figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
 			</figure>
@@ -80,7 +88,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure> -->
 		</div>
 	</section>
 	<section id="contact">
@@ -105,5 +113,6 @@
 		</ul>
 	</nav>
 </footer>
+<script src="./script.js"></script>
 </body>
 </html>
