--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<a href="./index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
+			<li><a href="./index.html#portfolio">projets</a></li>
+			<li><a href="./index.html#contact">contact</a></li>
 			<li>login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
@@ -25,14 +25,14 @@
 <main>
 	<section id="login">
 		<h2>Log In</h2>
-		<form action="#" method="post">
+		<form id="logRequest" action="http://localhost:5678/api/users/login" method="post">
 			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email" required>
 			<label for="motdepasse">Mot de passe</label>
-            <input type="motdepasse" name="motdepasse" id="motdepasse">
+            <input type="password" name="motdepasse" id="motdepasse" required>
 			<input type="submit" value="Se connecter">
 		</form>
-        <p>Mot de passe oublié</p>
+        <a href="#"><p>Mot de passe oublié</p></a>
 	</section>
 </main>
 <footer>
@@ -42,6 +42,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./script.js"></script>
+<script src="./login.js"></script>
 </body>
 </html>
