--- a/login.html
+++ b/login.html
@@ -12,15 +12,17 @@
 </head>
 <body>
 <header>
-	<a href="./index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-	<nav>
-		<ul>
-			<li><a href="./index.html#portfolio">projets</a></li>
-			<li><a href="./index.html#contact">contact</a></li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
+	<div class="navMenu">
+		<a href="./index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
+		<nav>
+			<ul>
+				<li><a href="./index.html#portfolio">projets</a></li>
+				<li><a href="./index.html#contact">contact</a></li>
+				<li>login</li>
+				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			</ul>
+		</nav>
+	</div>
 </header>
 <main>
 	<section id="login">
