Modale WIP création via JS

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </article>
       </section>
       <section id="portfolio">
-		<div class="portfolio__title">
-			<h2>Mes Projets</h2>
-		</div>
+        <div class="portfolio__title">
+          <h2>Mes Projets</h2>
+        </div>
         <!--AJOUTS DES FILTRES-->
         <div class="categories">
           <span id="All" class="filter activeFilter">Tous</span>
@@ -64,50 +64,28 @@
         </div>
         <!-- ///// -->
         <div class="gallery">
-          <!-- <figure>
-				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-				<figcaption>Appartement Paris V</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-				<figcaption>Restaurant Sushisen - Londres</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-				<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-				<figcaption>Structures Thermopolis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-				<figcaption>Appartement Paris X</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-				<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-				<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-				<figcaption>Appartement Paris XVIII</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-				<figcaption>Bar “Lullaby” - Paris</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure> -->
+        </div>
+      </section>
+      <!-- MODALES -->
+      <section class="modal hidden">
+        <div class="modal__wrapper">
+          <div class="modal__head">
+            <div class="icons modal1">
+              <a class="cross" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></a>
+            </div>
+            <h3>Galerie photo</h3>
+          </div>
+          <div class="modal__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            neque totam voluptate dolore id eveniet cumque animi laboriosam
+            praesentium ipsam reiciendis doloribus aliquid officia, consectetur
+            placeat. Illo unde ea et!
+          </div>
+          <hr />
+          <div class="modal__actions">
+            <a class="btn" href="#">Ajouter une photo</a>
+            <a class="delete" href="#">Supprimer la galerie</a>
+          </div>
         </div>
       </section>
       <section id="contact">
