--- a/index.html
+++ b/index.html
@@ -67,26 +67,76 @@
         </div>
       </section>
       <!-- MODALES -->
-      <section class="modal hidden">
-        <div class="modal__wrapper">
-          <div class="modal__head">
-            <div class="icons modal1">
-              <a class="cross" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></a>
+      <section class="modal modalA hidden">
+        <div class="wrapper">
+          <div class="head">
+            <div class="icons">
+              <a class="cross" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></a>
             </div>
             <h3>Galerie photo</h3>
           </div>
-          <div class="modal__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            neque totam voluptate dolore id eveniet cumque animi laboriosam
-            praesentium ipsam reiciendis doloribus aliquid officia, consectetur
-            placeat. Illo unde ea et!
+          <div class="content">
           </div>
           <hr />
-          <div class="modal__actions">
+          <div class="actions">
             <a class="btn" href="#">Ajouter une photo</a>
             <a class="delete" href="#">Supprimer la galerie</a>
           </div>
         </div>
+      </section>
+      <section class="modal modalB hidden">
+        <div class="wrapper">
+          <div class="head">
+            <div class="icons">
+              <a class="arrow" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></a>
+              <a class="cross" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></a>
+            </div>
+            <h3>Ajout photo</h3>
+          </div>
+          <form class="content" method="post" enctype="multipart/form-data">
+            <div class="imgAdd">
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#858585" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="M20.4 14.5L16 10 4 20"/></svg></span>
+              <label for="img">+ Ajouter photo</label>
+              <input class="imgInput" type="file" id="img" name="img" accept="image/png, image/jpeg" required>
+              <span class="imgReq">.jpg .png : 4mo max</span>
+            </div>
+            <div class="imgDesc">
+              <label for="title">Titre</label>
+              <input name="title" id="title" type="text" required>
+              <label for="categorySelect">Catégorie</label>
+              <select name="categories" id="categorySelect" required>
+                  <option value=""></option>
+                  <option value="Objets">Objets</option>
+                  <option value="Appartement">Appartements</option>
+                  <option value="Hotels & restaurants">Hotels & restaurants</option>
+              </select>
+            </div>
+            <input class="btn disabled" type="submit" value="Valider"/>
+          </form>
+          <!-- <div class="content">
+            <div class="imgAdd">
+              <span class="imgIcon"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#858585" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="M20.4 14.5L16 10 4 20"/></svg></span>
+              <label for="img">+ Ajouter photo</label>
+              <input class="imgInput" type="file" id="img" name="img" accept="image/png, image/jpeg">
+              <span class="imgReq">.jpg .png : 4mo max</span>
+            </div>
+            <div class="imgDesc">
+              <label for="title">Titre</label>
+              <input name="title" id="title" type="text">
+              <label for="categorySelect">Catégorie</label>
+              <select name="categories" id="categorySelect">
+                  <option value=""></option>
+                  <option value="objet">Objets</option>
+                  <option value="appartement">Appartements</option>
+                  <option value="autre">Hotels & restaurants</option>
+              </select>
+            </div>
+          </div>
+          <hr />
+          <div class="actions">
+            <a class="btn" href="#">Valider</a>
+          </div>
+        </div> -->
       </section>
       <section id="contact">
         <h2>Contact</h2>
