Reorganisation JS en Modules

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <section id="introduction">
-        <figure class="introduction__figure">
+        <figure>
           <img src="./assets/images/sophie-bluel.png" alt="" />
         </figure>
         <article>
@@ -127,7 +127,6 @@
         </form>
       </section>
     </main>
-
     <footer>
       <nav>
         <ul>
@@ -135,7 +134,9 @@
         </ul>
       </nav>
     </footer>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./assets/modules/modal.js"></script>
+    <script type="module" src="./assets/modules/editMode.js"></script>
     <script src="https://kit.fontawesome.com/0f5215b648.js" crossorigin="anonymous"></script>
   </body>
 </html>
