--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Sophie Bluel - Architecte d'intérieur</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
-    />
-    <meta name="description" content="" />
-    <link href="./assets/style.css" rel="stylesheet"/>
+   >
+    <meta name="description" content="">
+    <link href="./assets/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -21,14 +21,14 @@
           <li><a href="#portfolio">projets</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="./login.html" class="loginLink">login</a></li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="introduction">
         <figure>
-          <img src="./assets/images/sophie-bluel.png" alt="" />
+          <img src="./assets/images/sophie-bluel.png" alt="Photo Sophie Bluel">
         </figure>
         <article>
           <h2>Designer d'espace</h2>
@@ -58,7 +58,7 @@
           <span id="All" class="filter activeFilter">Tous</span>
           <span id="Objets" class="filter">Objets</span>
           <span id="Appartements" class="filter">Appartements</span>
-          <span id="Hotels & restaurants" class="filter">Hotels & restaurants</span>
+          <span class="filter">Hotels & restaurants</span>
         </div>
         <!-- GALLERY -->
         <div class="gallery">
@@ -75,7 +75,7 @@
           </div>
           <div class="content">
           </div>
-          <hr />
+          <hr>
           <div class="actions">
             <a class="btn">Ajouter une photo</a>
             <a class="delete">Supprimer la galerie</a>
@@ -103,27 +103,28 @@
               <input name="title" id="title" type="text" required>
               <label for="categorySelect">Catégorie</label>
               <select name="categories" id="categorySelect" required>
-                  <option value=""></option>
+                  <option value="">Choisissez une Catégorie</option>
                   <option value="Objets">Objets</option>
                   <option value="Appartement">Appartements</option>
                   <option value="Hotels & restaurants">Hotels & restaurants</option>
               </select>
             </div>
-            <hr/>
-            <input class="btn disabled" type="submit" value="Valider"/>
+            <hr>
+            <input class="btn disabled" type="submit" value="Valider">
           </form>
+        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
         <p>Vous avez un projet ? Discutons-en !</p>
         <form action="#" method="post">
           <label for="name">Nom</label>
-          <input type="text" name="name" id="name" />
+          <input type="text" name="name" id="name">
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
+          <input type="email" name="email" id="email">
           <label for="message">Message</label>
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
-          <input type="submit" value="Envoyer" />
+          <input type="submit" value="Envoyer">
         </form>
       </section>
     </main>
