--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Sophie Bluel - Architecte d'intérieur - Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
-    />
-    <meta name="description" content="" />
-    <link rel="stylesheet" href="./assets/style.css" />
+   >
+    <meta name="description" content="">
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
           <li><a href="./index.html#portfolio">projets</a></li>
           <li><a href="./index.html#contact">contact</a></li>
           <li>login</li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
         </ul>
       </nav>
     </header>
@@ -32,10 +32,10 @@
         <h2>Log In</h2>
         <form id="loginForm">
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" required />
+          <input type="email" name="email" id="email" required>
           <label for="motdepasse">Mot de passe</label>
-          <input type="password" name="motdepasse" id="motdepasse" required />
-          <input type="submit" value="Se connecter" />
+          <input type="password" name="motdepasse" id="motdepasse" required>
+          <input type="submit" value="Se connecter">
         </form>
 		    <span class="errorMessage hidden">Erreur dans l’identifiant ou le mot de passe</span>
         <a href="#"><p>Mot de passe oublié</p></a>
