--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -55,9 +55,9 @@
         </div>
         <!-- FILTERS -->
         <div class="categories">
-          <span id="All" class="filter activeFilter">Tous</span>
-          <span id="Objets" class="filter">Objets</span>
-          <span id="Appartements" class="filter">Appartements</span>
+          <span class="filter activeFilter">Tous</span>
+          <span class="filter">Objets</span>
+          <span class="filter">Appartements</span>
           <span class="filter">Hotels & restaurants</span>
         </div>
         <!-- GALLERY -->
