--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -135,7 +135,7 @@
         </ul>
       </nav>
     </footer>
-    <script type="module" src="./script.js"></script>
+    <script src="./script.js"></script>
     <script type="module" src="./assets/modules/modal.js"></script>
     <script type="module" src="./assets/modules/editMode.js"></script>
     <script src="https://kit.fontawesome.com/0f5215b648.js" crossorigin="anonymous"></script>
